--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,7 @@
-blinker==1.9.0
-click==8.3.1
-colorama==0.4.6
-Flask==3.1.3
-gunicorn==25.1.0
-itsdangerous==2.2.0
-Jinja2==3.1.6
-MarkupSafe==3.0.3
-packaging==26.0
-Werkzeug==3.1.6
+Flask
+gunicorn
+torch
+diffusers==0.25.0
+accelerate==0.27.2
+transformers==4.37.2
+safetensors
